Implement login page front-end
Changes made:
* Vendor sweetalert2 at v4.1.7 with minor changes (tracked in sweetalert.js.patch).
* Vendor Source Sans Pro font.
* Add HTML and JS for login page

--- a/public/html/playground-login.html
+++ b/public/html/playground-login.html
@@ -5,4 +5,10 @@ license that can be found in the LICENSE.md file.
 -->
 
 <html>
+	<body></body>
+	<link rel="stylesheet" href="/static/css/playground.css">
+	<link rel="stylesheet" href="/static/css/sweetalert2.css">
+	<link rel="stylesheet" href="/static/css/sweetalert2-play.css">
+	<script src="/static/js/sweetalert2.js"></script>
+	<script src="/static/js/playground-login.js"></script>
 </html>
