Add title to login page

--- a/public/html/playground-login.html
+++ b/public/html/playground-login.html
@@ -5,10 +5,14 @@ license that can be found in the LICENSE.md file.
 -->
 
 <html>
-	<body></body>
-	<link rel="stylesheet" href="/static/css/playground.css">
-	<link rel="stylesheet" href="/static/css/sweetalert2.css">
-	<link rel="stylesheet" href="/static/css/sweetalert2-play.css">
-	<script src="/static/js/sweetalert2.js"></script>
-	<script src="/static/js/playground-login.js"></script>
+	<head>
+		<title>Go Playground</title>
+		<link rel="stylesheet" href="/static/css/playground.css">
+		<link rel="stylesheet" href="/static/css/sweetalert2.css">
+		<link rel="stylesheet" href="/static/css/sweetalert2-play.css">
+		<script src="/static/js/sweetalert2.js"></script>
+	</head>
+	<body>
+		<script src="/static/js/playground-login.js"></script>
+	</body>
 </html>
